# preemclaud

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md  core.py  install.ps1  install.py  install.sh  install_v2.sh  lsp.py  pyproject.toml  routing.json  settings.json  update.py
.claude/rules/: markdown.md  python.md
.github/workflows/: develop.yml  maintain.yml  queue.yml  release-arasaka.yml  review.yml  test-arasaka.yml
arasaka/: CLAUDE.md  README.md  action.yml  package-lock.json  package.json  run.js  tsconfig.json
arasaka/actions/develop/: action.yml
arasaka/actions/maintain/: action.yml
arasaka/actions/queue/: action.yml
arasaka/actions/review/: action.yml
arasaka/content/prompt/: format.md  instructions.md  persona.md  scenarios.md
arasaka/content/shared/: formatting.md  persona.md
arasaka/markdown/: comment-template.md  header-error-template.md  header-template.md  initial-comment.md  operational-instructions.md  persona.md  response-format.md
arasaka/scripts/: build.ts  write_preset.py
arasaka/workflows/: arasaka.yml  develop.yml  maintain.yml  queue.yml  review.yml
blackwall/ghost/: README.md
chrome/.claude-plugin/: marketplace.json
chrome/ghost/: README.md
docs/: blackwall.md  chrome.md  cortex.md  deck.md  lsp.md  null.md  optics.md  rig.md
guides/: CODING_GUIDELINES.md  TESTING_GUIDELINES.md
lsp/.claude-plugin/: marketplace.json
lsp/java/: dependencies.json
lsp/python/: dependencies.json
null/.claude-plugin/: marketplace.json
null/ghost/: README.md
rig/.claude-plugin/: marketplace.json
scripts/: fmt-md.py
(+348 files in other folders)
