[project]
name = "preemclaud"
requires-python = ">=3.12"
dependencies = [
    "mdformat>=1.0.0",
    "mdformat-gfm>=0.3.0",
    "mdformat-frontmatter>=2.0.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
